--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ximdex/MarmottaClient",
+  "name": "ximdex/marmotta-client",
   "description": "Marmotta PHP Client",
   "minimum-stability": "dev",
   "license": "Apache",
